--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/strength?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/shopping?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=msdhoni07
 spring.h2.console.enabled=true
