--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.h2.console.enabled=true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=900
